--- a/style.css
+++ b/style.css
@@ -308,14 +308,11 @@ textarea {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100vw;
-    height: 100vh;
+    width: 80vw;
+    height: 80vh;
     display: flex;
     align-items: center;
-}
-
-.about-us img {
-    width: 100%;
+    margin: 0 100px;
 }
 
 .approach {
@@ -678,34 +675,35 @@ label {
 }
 
 .container .services-heading {
-    font-size: 80px;
+    font-size: 75px;
     font-weight: 800;
     text-transform: uppercase;
     color: #292726;
     text-align: start;
-    width: 382px;
     margin-left: 0;
 }
 
 .service-main-list {
     text-align: center;
-    margin-top: 70px;
+    margin-top: 40px;
     position: relative;
+    animation: zoomInOut 2s infinite alternate;
 }
 
 .service-main-list li {
     list-style: none;
-    margin-bottom: 5px;
+    margin-bottom: -8px;
 }
 
 .service-main-list li a {
     color: #000;
-    font-size: 100px;
+    font-size: 95px;
     font-weight: 900;
     text-transform: capitalize;
 }
 
 .service-main-list li:nth-child(1) a {
+    font-size: 120px;
     color: #15616d;
 }
 
@@ -717,23 +715,35 @@ label {
     color: #c5587b;
 }
 
+@keyframes zoomInOut {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .service-content {
     display: flex;
     flex-direction: column;
     position: absolute;
     width: 88%;
-    bottom: 0;
+    bottom: -15px;
     left: 130px;
 }
 
 .service-content .service-subheading {
     font-size: 24px;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .service-content .subservice-content {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
 }
 
@@ -836,23 +846,21 @@ label {
 .creative-icon,
 .dev-icon,
 .digital-icon {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
+    width: 55px;
+    height: 60px;
+    line-height: 80px;
     text-align: center;
     position: absolute;
     top: 0;
     right: 0;
     margin-left: 0px;
     color: #fff;
-    border-bottom-left-radius: 25px;
-    background: #f9b000;
 }
 
-.creative-icon i,
-.dev-icon i,
-.digital-icon i {
-    font-size: 14px;
+.creative-icon img,
+.dev-icon img,
+.digital-icon img {
+    border-bottom-left-radius: 12px;
 }
 
 
@@ -2546,7 +2554,9 @@ li.coco-gallery-item.b-w img {
         font-size: 55px;
     }
     .about-us {
-        display: block;
+        width: 100%;
+        height: 90vh;
+        margin: 0;
     }
     .approach {
         width: 100%;
@@ -2654,24 +2664,24 @@ li.coco-gallery-item.b-w img {
     }
     .services-main .services {
         height: 100%;
-        margin-bottom: 20px;
         margin-right: 0;
     }
     .container .services-heading {
         font-size: 60px;
         text-align: center;
-        width: 0;
     }
     .service-main-list {
         padding: 0;
         margin-left: 0;
-        margin-top: 65px;
     }
     .service-main-list li {
         margin-bottom: 0;
     }
     .service-main-list li a {
-        font-size: 33px;
+        font-size: 45px;
+    }
+    .service-main-list li:nth-child(1) a {
+        font-size: 50px;
     }
     .service-content {
         position: relative;
@@ -2714,5 +2724,8 @@ li.coco-gallery-item.b-w img {
     .digital-services .digital-content {
 	    font-size: 18px;
     }
-
+    .creative-icon, .dev-icon, .digital-icon {
+        width: 40px;
+        height: 55px;
+    }
 }
