--- a/style.css
+++ b/style.css
@@ -2658,18 +2658,24 @@ li.coco-gallery-item.b-w img {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-top: 0;
     }
     .services-main .services {
+        display: block;
         height: 100%;
+        width: 100%;
         margin-right: 0;
     }
     .container .services-heading {
-        font-size: 60px;
+        font-size: 45px;
         text-align: center;
+        margin-top: 110px;
     }
     .service-main-list {
         padding: 0;
         margin-left: 0;
+        right: 10px;
+        margin-top: 40px;
     }
     .service-main-list li {
         margin-bottom: 0;
