--- a/style.css
+++ b/style.css
@@ -681,12 +681,12 @@ label {
     color: #292726;
     text-align: start;
     margin-left: 10px;
-    margin-top: 212px;
+    margin-top: 14rem;
 }
 
 .service-main-list {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 4rem;
     position: absolute;
     right: 70px;
 }
@@ -697,7 +697,7 @@ label {
 }
 
 .service-main-list li:last-child {
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .service-main-list li a {
