--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ body {
 body a {
     text-decoration: none;
     color: #000000;    
-    transition: color .2s linear, 
-        background-color .2s linear, 
-        border-color .2s linear;
+    transition: color .2s linear;
+    background-color: .2s linear;
+    border-color: .2s linear;
 }
 
 body a:hover {
@@ -286,62 +286,26 @@ textarea {
 
 /* Home */
 .home {
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+    background: url(assets/home.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: calc(100vw - 100px);
+    left: 100px;
+    height: 100%;
 }
 
-.home h1 {
-    font-size: 100px;
-    line-height: 1;
-}
-
-.home h1:hover {
-    color: #fd8eb1; 
-}
 
 /* About */
 .about-us {
-    width: 100%;
-    height: 83vh;
-    background-color: #FDF8FA;
+    background: url(assets/aboutpage.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 80vw;
+    height: 80vh;
     display: flex;
     align-items: center;
-    padding: 50px;
-}
-
-.about-us .left {
-    padding: 0;
-    max-width: 800px;
-}
-
-.left h3 {
-    font-family: "Montserrat", sans-serif;
-    font-size: 50px;
-    margin-bottom: 15px;
-}
-
-.left h3:hover {
-    color: #f9b000;
-}
-
-.left p {
-    font-weight: 400;
-    font-size: 20px;
-    margin-bottom: 30px;
-}
-
-.about-us .right {
-    display: flex;
-    justify-content: center;
-    right: 0;
-}
-
-.about-us .right img {
-    max-width: 100%;
-    height: auto;
+    margin: 0 100px;
 }
 
 .approach {
@@ -351,7 +315,8 @@ textarea {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: calc(100vw - 100px);
+    left: 100px;
 }
 
 .approach h3 {
@@ -361,25 +326,15 @@ textarea {
 }
 
 .work {
-    width: 100vw;
-    height: 100%;
-    padding-left: 50px;
+    width: calc(100vw - 100px);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 9999;
     position: relative;
-    margin-bottom: 0;
-}
-
-.work h3 {
-    font-size: 60px;
-    font-weight: 600;
-}
-
-.work h3:hover {
-    color: #f9b000;
+    left: 100px;
 }
 
 .flag-container {
@@ -474,66 +429,420 @@ textarea {
     border-radius: 50%;
 }
 
-@media (max-width: 400px) {
-    .header-logo {
-        top: 8px;
+
+.contact-btn {
+    font-size: 20px;
+    color: #fff;
+    background-color: #000;
+    padding: 2px 14px;
+    border: none;
+    border-radius: 32px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    border: 3px solid #000;
+    text-transform: capitalize;
+    z-index: 9;
+    outline: none;
+    transition: color .15s cubic-bezier(0.22,1,0.36,1);
+}
+
+.contact-btn:hover {
+    color: #000;
+    background-color: #fff;
+}
+
+
+.career {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.career-bg {
+    background: url(assets/careers1.jpg) no-repeat center;
+    background-size: cover;
+    animation: zoomInOut 10s infinite alternate;
+    width: 100%;
+    height: 100vh;
+}
+
+@keyframes zoomInOut {
+    0% {
+        transform: scale(1);
     }
-    .header-logo img {
-        width: 80px;
+    50% {
+        transform: scale(1.1);
     }
-    .toggle-holder {
-        top: 12px;
-        left: 78%;
-    }
-    .socials {
-        display: none;
-    }
-    .pride {
-        display: none;
-    }
-    .home {
-        top: 52px;
-        position: relative;    
-        height: 100vh;
-    }
-    .home h1 {
-        font-size: 56px;
-    }
-    .about-us {
-        padding: 50px 15px;
-        display: block;
-    }
-    .about-us .left {
-        width: 330px;
-        overflow: hidden;
-        margin: 0 auto;
-    }
-    .about-us .left p {
-        font-size: 16px;
-        font-weight: 300;
-    }
-    .approach {
-        width: 100%;
-    }
-    .approach h3 {
-        font-size: 45px;
-    }
-    .work {
-        width: 100%;
-        height: 100vh;
-    }
-    .work .content {
-        max-width: 320px;
-    }
-    .horizontal-slider .no-horizontal-slider:last-child {
-        margin-left: 0;
-        margin-right: 0;
-        max-width: 100%;
-    }
-    .horizontal-slider .no-horizontal-slider .swiper-slide:last-child {
-        margin-bottom: 0;
+    100% {
+        transform: scale(1);
     }
 }
+
+.career-info {
+    animation: none;
+    left: 25%;
+    position: fixed;
+}
+
+.career .career-title {
+    font-family: "Montserrat", sans-serif;
+    font-size: 60px;
+    margin-top: 10px;
+    color: #fff;
+}
+
+.career .career-content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 15px;
+    animation: none !important;
+}
+
+.career .career-content .content-title {
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 0;
+    font-size: 22px;
+    font-weight: 600;
+    border-bottom: 2px solid #6bafd2;
+    width: 160px;
+}
+
+.career .career-content p {
+    width: 800px;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 0;
+    line-height: 1.5;
+}
+
+.career .button {
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.career .button a {
+    background: #fff;
+    color: #000;
+    padding: 4px 16px;
+    border-radius: 12px;
+    border: 2px solid #fff;
+    outline: none;
+}
+
+.career .button a:hover {
+    color: #fff;
+    border: 2px solid #fff;
+    background: none;
+}
+
+.contact-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.contact-container .contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    height: 100vh;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.contact-container .contact-title h2{
+    font-weight: 600;
+    color: #000;
+    font-size: 40px;
+    margin-bottom: 5px;
+}
+
+.contact-container .contact-title hr {
+    border: none;
+    width: 120px;
+    height: 5px;
+    background-color: #f9b000;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.contact-container .contact-inputs {
+    width: 800px;
+    height: 50px;
+    border: 1px solid #ccc;
+    outline: none;
+    padding: 5px 25px;
+    color: #666;
+    font-weight: 500;
+    border-radius: 50px;
+    margin-bottom: 20px;
+}
+
+.contact-container .textarea {
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+
+label {
+    margin-top: -10px;
+}
+
+.contact-container .contact-inputs:focus {
+    border: 2px solid #f9b000;
+}
+
+.contact-container .contact-inputs::placeholder {
+    color: #a9a9a9;
+}
+
+.contact-container button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    position: relative;
+    left: 40%;
+    padding: 10px 25px;
+    font-size: 18px;
+    color: #f9b000;
+    border: 2px solid #000;
+    border-radius: 50px;
+    background-color: #000;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.contact-container button:hover {
+    color: #000;
+    background-color: #fff;
+    border: 2px solid #000;
+}
+
+
+.container .services-main {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    left: 80px;
+    padding: 0 40px;
+}
+
+.services-main .services {
+    position: relative;
+    top: 20px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-right: 0;
+    height: 100vh;
+} 
+
+.services-main .services:last-child {
+    margin-right: 0;
+}
+
+.container .services-heading {
+    font-size: 60px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #292726;
+    text-align: start;
+    margin-left: 10px;
+    margin-top: 14rem;
+}
+
+.service-main-list {
+    text-align: center;
+    margin-top: 4rem;
+    position: absolute;
+    right: 70px;
+}
+
+.service-main-list li {
+    list-style: none;
+    margin-bottom: -5px;
+}
+
+.service-main-list li:last-child {
+    margin-top: 20px;
+}
+
+.service-main-list li a {
+    font-size: 108px;
+    font-weight: 900;
+    text-transform: capitalize;
+    line-height: 0.4;
+    -webkit-text-stroke: 2px solid #000;
+    text-shadow: 2px 2px 0 #000;
+}
+
+.service-main-list li:nth-child(1) a {
+    font-size: 130px;
+    color: #15616d;
+}
+
+.service-main-list li:nth-child(2) a {
+    color: #ca7a2f;
+}
+
+.service-main-list li:nth-child(3) a {
+    color: #c5587b;
+    line-height: 0.5;
+}
+
+.service-content {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 88%;
+    bottom: -15px;
+    left: 130px;
+}
+
+.service-content .service-subheading {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.service-content .subservice-content {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.container .creative-services,
+.container .dev-services,
+.container .digital-services {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: start;
+    padding: 50px 10px 60px 150px;
+    margin-left: -20px;
+}
+
+.container .digital-services {
+    margin-bottom: 0;
+}
+
+.creative-services .creative-heading,
+.dev-services .dev-heading,
+.digital-services .digital-heading {
+    font-size: 28px;
+    font-weight: 700;
+    border-bottom: 2px solid #f9b000;
+}
+
+.creative-services .creative-content,
+.dev-services .dev-content,
+.digital-services .digital-content {
+    font-size: 22px;
+    text-align: start;
+    margin-top: 10px;
+}
+
+.creative-sections,
+.dev-sections,
+.digital-sections {
+    margin: 0;
+    padding: 0;
+}
+
+.creative-row,
+.dev-row,
+.digital-row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.digital-row {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.creative-list a h4,
+.dev-list a h4,
+.digital-list a h4 {
+    font-size: 20px;
+    color: #f9b000;
+}
+
+.creative-list,
+.dev-list,
+.digital-list {
+    background: #000;
+    color: #fff;
+    margin-top: 24px;
+    padding: 20px 25px;
+    position: relative;
+    border-radius: 12px;
+    -webkit-box-shadow: 0 15px 20px 0 rgb(0 0 0 / 8%);
+    box-shadow: 0 15px 20px 0 rgb(0 0 0 / 8%);
+    -webkit-transition: all .2s ease-in;
+    -moz-transition: all .2s ease-in;
+    -ms-transition: all .2s ease-in;
+    -o-transition: all .2s ease-in;
+    transition: all .2s ease-in;
+    width: 375px;
+} 
+
+.digital-list {
+    width: 575px;
+    padding: 40px 45px;
+}
+
+.creative-list:hover,
+.dev-list:hover,
+.digital-list:hover {
+    background: #f9b000;
+    color: #000;
+}
+
+.creative-list:hover h4,
+.dev-list:hover h4,
+.digital-list:hover h4 {
+    color: #fff;
+}
+
+.creative-icon,
+.dev-icon,
+.digital-icon {
+    width: 55px;
+    height: 60px;
+    line-height: 80px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-left: 0px;
+    color: #fff;
+}
+
+.creative-icon img,
+.dev-icon img,
+.digital-icon img {
+    border-bottom-left-radius: 12px;
+}
+
 
 
 /* ===================================
@@ -684,7 +993,7 @@ textarea {
     font-weight: 400;
 }
 
-.has-submenu {
+.dropdownbtn {
     position: relative;
     display: block;
 }
@@ -692,13 +1001,14 @@ textarea {
 .service-dropdown {
     display: none;
     position: absolute;
-    left: 330px;
+    left: 270px;
     top: -150px;
-    width: 850px;
+    width: 950px;
     height: 100%;
+    transition: all 5s ease-in-out;
 }
 
-.has-submenu:hover .service-dropdown {
+.dropdownbtn:hover .service-dropdown {
     display: block;
 }
 
@@ -717,7 +1027,7 @@ textarea {
 }
 
 .service-dropdown .service-list ul:first-child {
-    margin-right: 50px;
+    margin-right: 20px;
 }
 
 .service-list .heading {
@@ -727,27 +1037,18 @@ textarea {
 }
 
 .service-list .heading:hover {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 20px;
 }
 
 .first li a.heading-list,
 .second li a.heading-list,
 .third li a.heading-list {
-    font-size: 18px;
+    font-size: 16.5px;
     color: #fff;
     font-weight: 500;
     text-transform: capitalize;
 }
-
-.first li a.heading-list:hover,
-.second li a.heading-list:hover,
-.third li a.heading-list:hover {
-    color: #fff;
-    font-weight: 500;
-}
-
-
 
 .sm-clean .sub-menu li a:hover, 
 .sm-clean .sub-menu li a.current, 
@@ -2225,7 +2526,9 @@ li.coco-gallery-item.b-w img {
         font-size: 55px;
     }
     .about-us {
-        display: block;
+        width: 100%;
+        height: 90vh;
+        margin: 0;
     }
     .approach {
         width: 100%;
@@ -2330,27 +2633,33 @@ li.coco-gallery-item.b-w img {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-top: 0;
     }
     .services-main .services {
+        display: block;
         height: 100%;
-        margin-bottom: 20px;
+        width: 100%;
         margin-right: 0;
     }
     .container .services-heading {
-        font-size: 60px;
+        font-size: 45px;
         text-align: center;
-        width: 0;
+        margin-top: 110px;
     }
     .service-main-list {
         padding: 0;
         margin-left: 0;
-        margin-top: 65px;
+        right: 10px;
+        margin-top: 40px;
     }
     .service-main-list li {
         margin-bottom: 0;
     }
     .service-main-list li a {
-        font-size: 33px;
+        font-size: 45px;
+    }
+    .service-main-list li:nth-child(1) a {
+        font-size: 50px;
     }
     .service-content {
         position: relative;
@@ -2393,89 +2702,8 @@ li.coco-gallery-item.b-w img {
     .digital-services .digital-content {
 	    font-size: 18px;
     }
-
-}
-
-
-
-@media (max-width: 400px) {
-    .header-logo {
-        top: 8px;
-    }
-    .header-logo img {
-        width: 80px;
-    }
-    .toggle-holder {
-        top: 12px;
-        left: 78%;
-    }
-    .socials {
-        display: none;
-    }
-    .pride {
-        display: none;
-    }
-    .main-menu.sm-clean {
-        max-width: 215px;
-    }
-    .home {
-        position: relative;
-        height: 100vh;
-        top: -50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .home h1 {
-        font-size: 55px;
-    }
-    .about-us {
-        width: 100vw;
-        height: 100%;
-        display: block;
-        padding: 50px 0;
-    }
-    
-    .about-us video {
-        width: 100%;
-    }
-    .about-us .left {
-        width: 330px;
-        overflow: hidden;
-        margin: 0 auto;
-    }
-    .about-us .left p {
-        font-size: 16px;
-        font-weight: 300;
-    }
-    .approach {
-        width: 100%;
-    }
-    .approach h3 {
-        font-size: 45px;
-    }
-    .work {
-        width: 100%;
-        height: 100vh;
-    }
-    .work .content {
-        max-width: 320px;
-    }
-    .horizontal-slider .no-horizontal-slider {
-        margin-left: 0;
-        margin-right: 0;
-        max-width: 100%;
-    }
-    .horizontal-slider .no-horizontal-slider:last-child {
-        margin-left: 0;
-        margin-right: 0;
-        max-width: 100%;
-    }
-    .horizontal-slider .no-horizontal-slider .swiper-slide:last-child {
-        margin-bottom: 0;
-    }
-    .contact-btn {
-        font-size: 16px;
-        padding: 6px 12px;
+    .creative-icon, .dev-icon, .digital-icon {
+        width: 40px;
+        height: 55px;
     }
 }
