--- a/style.css
+++ b/style.css
@@ -286,7 +286,6 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
     background-size: cover;
     width: calc(100vw - 100px);
-    left: 100px;
     height: 100%;
 }
 
@@ -1815,7 +1814,7 @@ p.menu-text-title {
 
     .horizontal-slider .no-horizontal-slider {
         display: block !important;
-        margin-top: 100px;
+        margin-top: 80px;
         margin-left: 25px;
         margin-right: 25px;
         text-align: center;
@@ -2041,18 +2040,17 @@ p.menu-text-title {
     }
     .home {
         position: relative;
-        height: 100vh;
-        top: -50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        height: calc(100vh - 80px);
+        background-position: center;
+        background-size: contain;
+        width: 100%;
     }
     .home h1 {
         font-size: 55px;
     }
     .about-us {
         width: 100%;
-        height: 90vh;
+        height: calc(100vh - 80px);
         margin: 0;
     }
     .approach {
@@ -2232,3 +2230,4 @@ p.menu-text-title {
         height: 55px;
     }
 }
+
