--- a/style.css
+++ b/style.css
@@ -888,7 +888,7 @@ label {
 }
 
 .service-description .description-content {
-    font-weight: 20px;
+    font-size: 18px;
     font-weight: 500;
     margin-top: 10px;
 }
