--- a/style.css
+++ b/style.css
@@ -320,18 +320,20 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat", sans-serif;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: calc(100vw - 100px);
-    background: url(assets/approach.jpeg);
-    background-position: contain;
-    background-size: cover;
 }
 
 .approach h3 {
     font-size: 60px;
-    color: #fff;
-    line-height: 1;
+    color: #000;
+    margin-bottom: 20px;
+}
+
+.approach-img {
+    height: calc(100vh - 100px);
 }
 
 /* WORK */
