--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Home */
 .home {
-    background: url(assets/home.webp);
+    background: url(assets/new.webp);
     background-repeat: no-repeat;
     background-size: cover;
     width: calc(100vw - 100px);
