--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: center;
     width: calc(100vw - 100px);
-    background-color: #000;
+    background-color: #1D1D1B;
 }
 
 .approach h3 {
